# vio_g2o

./: .gitmodules  CMakeLists.txt  README.md  dependencies.rosinstall  package.xml
include/vio_g2o/: IMUErrorModel.cpp  IMU_constraint.h  ImuErrorModel.h  ImuErrorModelImpl.h  transformations.h
src/: IMU_constraint.cpp  anchored_points.cpp  scale_solver.cpp
src/apps/: densifyPoses.cpp
test/: test_IMU.cpp
